kubernetes/main/apps/system/atlantis/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: atlantis.garb.dev
    external-dns.alpha.kubernetes.io/target: dummy
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: atlantis
  namespace: system
spec:
  hostnames:
    - atlantis.garb.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: atlantis
          namespace: system
          port: 4141
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
